0.99.6

* Implemented a solution for missing extensions.

0.99.5.2

* Added Belorussian translation from Fat Cowest (fatcow.com).
* Cleaned up some code in the refresh() method.
* Plurk feed has been readded.
* Fixed an issue with BrightKite check-ins.
* get_label_class should now be defined rather than get_label on feeds.
* Fixed a bug with LikeSongLabel.
* Labels now utilize CAN_GROUP and TEMPLATE constants.

0.99.5.1

* Fixed an issue introduced in 0.99.5 with the locales directory.

0.99.5

* Removed hardcoded wp-content directories.
* Updated Japanese translation.
* Twitter will no longer import your entire history.

0.99.4

* Fix for bug introduced into edit-feed in 0.99.3

0.99.3

* Added HAS_EXCERPTS flag to extensions.
* Excerpts can now be configured per-extension.
* Delicious and similar feeds will now all show excerpts properly.
* Added Upcoming extension.
* Fixed Scrnshots titles.
* Fixed a serious issue with feed keys (many feeds weren't properly identifying new events).
* Fixed an issue where some feeds were not setting dates properly.
* Added Wikipedia extension.

0.99.2

* Updated default localization.
* Updated Spanish localization from Gizmo (first nearly complete translation)!
* Owners now show again on message feeds (e.g. Twitter).
* Fix for Last.FM and similar not showing titles.

0.99.1

* Show owners works again.
* Sidebar widget now has an option to hide/show metadata.
* Icon validation is now only used for automatic favicons.
* Fixed the RSS feed having strange titles.
* break_groups works right again on lifestream calls.

0.98h / 0.99

* Downgraded SimplePie in an attempt to solve some issues with reading feeds.

0.98g

* Tweaked feed and event displays to more informative in the admin.

0.98f

* Facebook now uses MessageLabel.
* Generic feed now uses basic label template.

0.98e

* Sidebar now hides metadata.
* Tweaked metadata to fall in line with new service concept.

0.98d

* Fixed Tumblr feed showing HTML.